tests/should-fail/use-type-imported-by-import.ls
-- dom imports std - let's try to use the Maybe type.
import dom;

main :: Maybe Int;
main = error "blah";
